--- a/package.json
+++ b/package.json
@@ -20,5 +20,11 @@
 		"grunt-git": "^0.3.5",
 		"grunt-version": "^1.0.0",
 		"underscore": "^1.8.3"
+	},
+	"dependencies": {
+		"bulma": "^0.4.4"
+	},
+	"scripts": {
+		"bulma": "bash ./.scripts/bulma.sh"
 	}
 }
