--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
 		"grunt-gh-release": "0.0.2",
 		"grunt-git": "^0.3.5",
 		"grunt-version": "^1.0.0",
-		"underscore": "^1.8.3"
+		"grunt-sass": "^2.1.0",
+		"underscore": "^1.8.3",
+		"bulma": "^0.4.2"
 	}
 }
